// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Danger 1`] = `
<div
  className="react-ripples"
  onClick={[Function]}
  style={
    Object {
      "display": "inline-flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <button
    className="button medium danger"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
  >
    Click me!
    <i
      className="material-icons icon"
      style={
        Object {
          "fontSize": "",
        }
      }
    >
      delete
    </i>
  </button>
  <s
    style={
      Object {
        "borderRadius": "50%",
        "height": 35,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translate(-50%, -50%)",
        "width": 35,
      }
    }
  />
</div>
`;

exports[`Storyshots Button Large 1`] = `
<div
  className="react-ripples"
  onClick={[Function]}
  style={
    Object {
      "display": "inline-flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <button
    className="button large standard"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
  >
    Button
    <i
      className="material-icons icon"
      style={
        Object {
          "fontSize": "",
        }
      }
    >
      chevron_right
    </i>
  </button>
  <s
    style={
      Object {
        "borderRadius": "50%",
        "height": 35,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translate(-50%, -50%)",
        "width": 35,
      }
    }
  />
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="react-ripples"
  onClick={[Function]}
  style={
    Object {
      "display": "inline-flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <button
    className="button medium primary"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
  >
    Click me!
    <i
      className="material-icons icon"
      style={
        Object {
          "fontSize": "",
        }
      }
    >
      chevron_right
    </i>
  </button>
  <s
    style={
      Object {
        "borderRadius": "50%",
        "height": 35,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translate(-50%, -50%)",
        "width": 35,
      }
    }
  />
</div>
`;

exports[`Storyshots Button Small 1`] = `
<div
  className="react-ripples"
  onClick={[Function]}
  style={
    Object {
      "display": "inline-flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <button
    className="button small standard"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
  >
    Button
    <i
      className="material-icons icon"
      style={
        Object {
          "fontSize": "",
        }
      }
    >
      chevron_right
    </i>
  </button>
  <s
    style={
      Object {
        "borderRadius": "50%",
        "height": 35,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translate(-50%, -50%)",
        "width": 35,
      }
    }
  />
</div>
`;

exports[`Storyshots Button Standard 1`] = `
<div
  className="react-ripples"
  onClick={[Function]}
  style={
    Object {
      "display": "inline-flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <button
    className="button medium standard"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
  >
    Click me!
    <i
      className="material-icons icon"
      style={
        Object {
          "fontSize": "",
        }
      }
    >
      chevron_right
    </i>
  </button>
  <s
    style={
      Object {
        "borderRadius": "50%",
        "height": 35,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translate(-50%, -50%)",
        "width": 35,
      }
    }
  />
</div>
`;

exports[`Storyshots ChooseComponentPagePage Standard 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <div
      className="titlecontainer"
    >
      <div
        className="title notdynamic"
      >
        Choose equipment group
      </div>
    </div>
    <hr
      className="line"
    />
  </div>
  <div
    className="components"
  >
    <div
      className="equipmentContainer"
    >
      <div>
        <div
          className="container"
          onClick={[Function]}
        >
          <img
            className="image"
            src="https://www.svgrepo.com/show/131030/question-mark.svg"
          />
          Fire Equipment
        </div>
      </div>
    </div>
    <div
      className="equipmentContainer"
    >
      <div>
        <div
          className="container"
          onClick={[Function]}
        >
          <img
            className="image"
            src="https://www.svgrepo.com/show/131030/question-mark.svg"
          />
          Cake Equipment
        </div>
      </div>
    </div>
    <div
      className="equipmentContainer"
    >
      <div>
        <div
          className="container"
          onClick={[Function]}
        >
          <img
            className="image"
            src="https://www.svgrepo.com/show/131030/question-mark.svg"
          />
          Some other group
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/display-field Standard 1`] = `
<div>
  <div
    className="container"
  >
    <label
      className="index"
    >
      Index: 
    </label>
    <label
      className="content"
    >
      123456
    </label>
  </div>
  <div>
    <hr
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots Components/editable-field Editmode 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="container"
    >
      <label
        className="index"
      >
        Index: 
      </label>
      <input
        className="content input"
        id="inputContent"
        placeholder="123456"
        type="text"
      />
    </div>
    <div>
      <button
        aria-label="delete"
        className="MuiButtonBase-root MuiIconButton-root icon MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <i
            className="material-icons icon"
          >
            done
          </i>
        </span>
      </button>
    </div>
  </div>
  <div>
    <hr
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots Components/editable-field Not Admin 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="container"
    >
      <label
        className="index"
      >
        Index: 
      </label>
      <label
        className="content"
      >
        123456
      </label>
    </div>
  </div>
  <div>
    <hr
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots Components/editable-field Viewmode 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="container"
    >
      <label
        className="index"
      >
        Index: 
      </label>
      <label
        className="content"
      >
        123456
      </label>
    </div>
    <div>
      <button
        aria-label="delete"
        className="MuiButtonBase-root MuiIconButton-root iconbutton MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <i
            className="material-icons icon"
          >
            edit
          </i>
        </span>
      </button>
    </div>
  </div>
  <div>
    <hr
      className="divider"
    />
  </div>
</div>
`;

exports[`Storyshots DropDownMenu Company User 1`] = `
<div>
  <div
    className="title notClicked"
  >
    <div
      className="usersymbol"
      onClick={[Function]}
    >
      S
    </div>
  </div>
</div>
`;

exports[`Storyshots EquipmentGroup Editable 1`] = `
<div>
  <div
    className="container"
  >
    <img
      className="image"
      src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Aiga_fire_extinguisher.svg/337px-Aiga_fire_extinguisher.svg.png"
    />
    Fire equipment
    <i
      className="material-icons icon"
    >
      editor
    </i>
  </div>
</div>
`;

exports[`Storyshots EquipmentGroup No Img 1`] = `
<div>
  <div
    className="container"
  >
    <img
      className="image"
      src="https://www.svgrepo.com/show/131030/question-mark.svg"
    />
    Fire equipment
  </div>
</div>
`;

exports[`Storyshots EquipmentGroup Standard 1`] = `
<div>
  <div
    className="container"
  >
    <img
      className="image"
      src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Aiga_fire_extinguisher.svg/337px-Aiga_fire_extinguisher.svg.png"
    />
    Fire equipment
  </div>
</div>
`;

exports[`Storyshots Filter Filter Component 1`] = `
<div
  className="open"
>
  <div
    className="container"
  >
    <button
      className="button standard"
      onClick={[Function]}
    >
      <div>
        Components
      </div>
      <i
        className="material-icons icon"
      >
        expand_more
      </i>
    </button>
  </div>
</div>
`;

exports[`Storyshots FilterButton Standard Filter Button 1`] = `
<div
  className="container"
>
  <button
    className="button standard"
  >
    <div>
      Flame detector
    </div>
    <i
      className="material-icons icon"
    >
      expand_more
    </i>
  </button>
</div>
`;

exports[`Storyshots Frontpage General Frontpage 1`] = `
<div
  className="frontpage"
>
  <div
    className="title"
  >
    PDS Datahåndbok
  </div>
  <div
    className="generalMenu menu"
  >
    <div
      className="primary SearchField"
      onBlur={[Function]}
    >
      <div
        className="field"
      >
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search for component..."
          value=""
        />
        <i
          className="material-icons icon"
        >
          search
        </i>
      </div>
      <ul />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Read PDS datahandbook
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Browse equipment data
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Frontpage Moderator Frontpage 1`] = `
<div
  className="frontpage"
>
  <div
    className="title"
  >
    PDS Datahåndbok
  </div>
  <div
    className="generalMenu menu"
  >
    <div
      className="primary SearchField"
      onBlur={[Function]}
    >
      <div
        className="field"
      >
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search for component..."
          value=""
        />
        <i
          className="material-icons icon"
        >
          search
        </i>
      </div>
      <ul />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Read and edit PDS datahandbook
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Browse and edit equipment data
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Frontpage Operator Frontpage 1`] = `
<div
  className="frontpage"
>
  <div
    className="title"
  >
    PDS Datahåndbok
  </div>
  <div
    className="operatorMenu menu"
  >
    <div
      className="primary SearchField"
      onBlur={[Function]}
    >
      <div
        className="field"
      >
        <input
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search for component..."
          value=""
        />
        <i
          className="material-icons icon"
        >
          search
        </i>
      </div>
      <ul />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Read PDS datahandbook
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Browse equipment data
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Browse own equipment data
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        className="button medium standard"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Add data
        <i
          className="material-icons icon"
          style={
            Object {
              "fontSize": "",
            }
          }
        >
          chevron_right
        </i>
      </button>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Standard 1`] = `
<div
  className="container"
>
  <div
    className="home"
  >
    PDS Datahandbook
  </div>
  <div>
    <div
      className="title notClicked"
    >
      <div
        className="usersymbol"
        onClick={[Function]}
      >
        J
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input field Primary Input 1`] = `
<div
  className="primary field  "
>
  <label
    className=""
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input Label
  </label>
  <input
    id="Input Label"
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`Storyshots Input field Primary Text Area 1`] = `
<div
  className="primary field  fieldPadding"
>
  <label
    className=""
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
  >
    Input Label
  </label>
  <textarea
    cols={40}
    id="Input Label"
    onChange={[Function]}
    rows={10}
  />
</div>
`;

exports[`Storyshots Input field Primary With Default 1`] = `
<div
  className="primary field  "
>
  <label
    className="labelTuck"
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input Label
  </label>
  <input
    defaultValue="Default value"
    id="Input Label"
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`Storyshots Input field Primary With File 1`] = `
<div
  className="primary field  "
>
  <label
    className="labelTuck"
    htmlFor="Input label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input label
  </label>
  <input
    id="Input label"
    onChange={[Function]}
    type="file"
  />
  <i
    className="material-icons icon"
  >
    add_photo_alternate
  </i>
</div>
`;

exports[`Storyshots Input field Primary With Icon 1`] = `
<div
  className="primary field  "
>
  <label
    className="labelTuck"
    htmlFor="Input label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input label
  </label>
  <input
    defaultValue="Default value"
    id="Input label"
    onChange={[Function]}
    type="text"
  />
  <i
    className="material-icons icon"
  >
    search
  </i>
</div>
`;

exports[`Storyshots Input field Standard Input 1`] = `
<div
  className="standard field  "
>
  <label
    className=""
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input Label
  </label>
  <input
    id="Input Label"
    onChange={[Function]}
    placeholder="Input placeholder"
    type="text"
  />
</div>
`;

exports[`Storyshots Input field Standard Input With Icon 1`] = `
<div
  className="standard field  "
>
  <label
    className=""
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input Label
  </label>
  <input
    id="Input Label"
    onChange={[Function]}
    placeholder="Input placeholder"
    type="text"
  />
  <i
    className="material-icons icon"
  >
    add_photo_alternate
  </i>
</div>
`;

exports[`Storyshots Input field Standard Text Area 1`] = `
<div
  className="standard field  fieldPadding"
>
  <label
    className=""
    htmlFor="Input Label"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
  >
    Input Label
  </label>
  <textarea
    cols={40}
    id="Input Label"
    onChange={[Function]}
    placeholder="Input placeholder"
    rows={10}
  />
</div>
`;

exports[`Storyshots Input field Standard With File 1`] = `
<div
  className="standard field  "
>
  <label
    className=""
    htmlFor="Input label"
    style={
      Object {
        "alignSelf": "",
      }
    }
  >
    Input label
  </label>
  <input
    id="Input label"
    onChange={[Function]}
    type="file"
  />
  <i
    className="material-icons icon"
  >
    add_photo_alternate
  </i>
</div>
`;

exports[`Storyshots MenuButton Log Out 1`] = `
<div
  className="container"
>
  <hr
    className="line"
  />
  <button
    className="button logout "
  >
    Log out
  </button>
</div>
`;

exports[`Storyshots MenuButton Notify 1`] = `
<div
  className="container"
>
  <hr
    className="line"
  />
  <button
    className="button standard notify"
  >
    Approve new users
    <div
      className="notifysignal"
    >
      1
    </div>
  </button>
</div>
`;

exports[`Storyshots MenuButton Standard 1`] = `
<div
  className="container"
>
  <hr
    className="line"
  />
  <button
    className="button standard "
  >
    Adapt premissions for user groups
  </button>
</div>
`;

exports[`Storyshots Pages/Read Admin 1`] = `
Array [
  <div
    className="controls"
  >
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <i
        aria-label="menu"
        className="material-icons"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "fontSize": "24px",
          }
        }
      >
        menu
      </i>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <i
        aria-label="create"
        className="material-icons"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "fontSize": "24px",
          }
        }
      >
        create
      </i>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
  </div>,
  <div
    className="content"
  >
    Oups! Looks like there's no content here yet.
  </div>,
]
`;

exports[`Storyshots Pages/Read Standard 1`] = `
Array [
  <div
    className="controls"
  >
    <div
      className="react-ripples"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-flex",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <i
        aria-label="menu"
        className="material-icons"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "fontSize": "24px",
          }
        }
      >
        menu
      </i>
      <s
        style={
          Object {
            "borderRadius": "50%",
            "height": 35,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "transform": "translate(-50%, -50%)",
            "width": 35,
          }
        }
      />
    </div>
  </div>,
  <div
    className="content"
  >
    Oups! Looks like there's no content here yet.
  </div>,
]
`;

exports[`Storyshots RegisteredDataField Standard 1`] = `
<div
  className="container"
>
  <td>
    <label>
       test1 
    </label>
  </td>
  <td>
    <label
      type="submit"
    >
      test2
    </label>
  </td>
  <td>
    <label>
       test2 
    </label>
  </td>
  <td>
    <i
      className="material-icons"
    >
      editor
    </i>
  </td>
</div>
`;

exports[`Storyshots Search field Primary Search Field 1`] = `
<div
  className="primary SearchField"
  onBlur={[Function]}
>
  <div
    className="field"
  >
    <input
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for component..."
      value=""
    />
    <i
      className="material-icons icon"
    >
      search
    </i>
  </div>
  <ul />
</div>
`;

exports[`Storyshots Search field Secondary Search Field 1`] = `
<div
  className="secondary SearchField"
  onBlur={[Function]}
>
  <div
    className="field"
  >
    <label>
      Component
      :
    </label>
    <input
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Set a component..."
      value=""
    />
  </div>
  <ul />
</div>
`;

exports[`Storyshots SideMenu Admin Side Menu 1`] = `
<div
  className="container"
>
  <div
    className="home"
  />
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      My account
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Review next release
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Adapt premissions for user groups
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Add new companies
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard notify"
    >
      Approve new users
      <div
        className="notifysignal"
      >
        2
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots SideMenu General Side Menu 1`] = `
<div
  className="container"
>
  <div
    className="home"
  />
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      My account
    </button>
  </div>
</div>
`;

exports[`Storyshots SideMenu Operator Side Menu 1`] = `
<div
  className="container"
>
  <div
    className="home"
  />
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      My account
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Browse own equipment data
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Company account
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Manage staffmember
    </button>
  </div>
  <div
    className="container"
  >
    <hr
      className="line"
    />
    <button
      className="button standard "
    >
      Manage facilities
    </button>
  </div>
</div>
`;

exports[`Storyshots Switch Checked 1`] = `
<label
  className="switch medium"
>
  <input
    checked={true}
    type="checkbox"
  />
  <span
    className="slider round"
  >
     
  </span>
</label>
`;

exports[`Storyshots Switch Large 1`] = `
<label
  className="switch large"
>
  <input
    type="checkbox"
  />
  <span
    className="slider round"
  >
     
  </span>
</label>
`;

exports[`Storyshots Switch Small 1`] = `
<label
  className="switch small"
>
  <input
    type="checkbox"
  />
  <span
    className="slider round"
  >
     
  </span>
</label>
`;

exports[`Storyshots Switch Standard 1`] = `
<label
  className="switch medium"
>
  <input
    type="checkbox"
  />
  <span
    className="slider round"
  >
     
  </span>
</label>
`;

exports[`Storyshots Table Table Component 1`] = `
<table
  className="dataTable"
>
  <tr>
    <th>
      Failure Rates
    </th>
    <th>
      Source
    </th>
    <th>
      DUobs
    </th>
    <th>
      T
    </th>
    <th>
      Observation Period
    </th>
    <th>
      Population Size
    </th>
    <th>
      Comment
    </th>
  </tr>
  <tr>
    <td>
      0,3
    </td>
    <td>
      Facility A
    </td>
    <td>
      10
    </td>
    <td>
      2,8*10^7 h
    </td>
    <td>
      2006-2018
    </td>
    <td>
      659
    </td>
    <td>
      Very cool data
    </td>
  </tr>
  <tr>
    <td>
      0,5
    </td>
    <td>
      Facility C
    </td>
    <td>
      8
    </td>
    <td>
      2,8* 10^9 h
    </td>
    <td>
      1999-2020
    </td>
    <td>
      666
    </td>
    <td>
      This data is data
    </td>
  </tr>
  <tr>
    <td>
      0,8
    </td>
    <td>
      Facility B
    </td>
    <td>
      12
    </td>
    <td>
      2,7* 10^5 h
    </td>
    <td>
      2019-2020
    </td>
    <td>
      123
    </td>
    <td>
      Another instance of data
    </td>
  </tr>
  <tr>
    <td>
      0,8
    </td>
    <td>
      Facility B
    </td>
    <td>
      12
    </td>
    <td>
      2,7* 10^5 h
    </td>
    <td>
      2019-2020
    </td>
    <td>
      123
    </td>
    <td>
      Even more data
    </td>
  </tr>
</table>
`;

exports[`Storyshots TextBox Large 1`] = `
<div
  className="container large"
>
  <div
    className="titlecontainer"
  >
    Description
    <hr
      className="line"
    />
  </div>
  <div>
    The detector includes the sensor and local electronics such as the address-/ interface unit.
  </div>
</div>
`;

exports[`Storyshots TextBox Large Admin Text Box 1`] = `
<div
  className="container large"
>
  <div
    className="material-icons icon"
  >
    editor
  </div>
  <div
    className="titlecontainer"
  >
    Description
    <hr
      className="line"
    />
  </div>
  <div>
    test
  </div>
</div>
`;

exports[`Storyshots TextBox Small 1`] = `
<div
  className="container small"
>
  <div
    className="titlecontainer"
  >
    Description
    <hr
      className="line"
    />
  </div>
  <div>
    The detector includes the sensor and local electronics such as the address-/ interface unit.
  </div>
</div>
`;

exports[`Storyshots TextBox Small Admin Text Box 1`] = `
<div
  className="container small"
>
  <div
    className="material-icons icon"
  >
    editor
  </div>
  <div
    className="titlecontainer"
  >
    Description
    <hr
      className="line"
    />
  </div>
  <div>
    test
  </div>
</div>
`;

exports[`Storyshots Title Dynamic 1`] = `
<div
  className="container"
>
  <div
    className="titlecontainer"
  >
    <div
      className="title "
    >
      Failure data at
    </div>
    <div
      className="dynamic"
    >
      Askeladden
    </div>
  </div>
  <hr
    className="line"
  />
</div>
`;

exports[`Storyshots Title Standard 1`] = `
<div
  className="container"
>
  <div
    className="titlecontainer"
  >
    <div
      className="title notdynamic"
    >
      Choose Facility
    </div>
  </div>
  <hr
    className="line"
  />
</div>
`;

exports[`Storyshots pages/AddDataPagePage Standard 1`] = `
<div
  className="container title"
>
  <div
    className="container"
  >
    <div
      className="titlecontainer"
    >
      <div
        className="title notdynamic"
      >
        Choose Facility
      </div>
    </div>
    <hr
      className="line"
    />
  </div>
  <div
    className="secondary SearchField"
    onBlur={[Function]}
  >
    <div
      className="field"
    >
      <label>
        Facility
        :
      </label>
      <input
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Choose facility to register data to..."
        value=""
      />
    </div>
    <ul />
  </div>
</div>
`;

exports[`Storyshots pages/Browse Standard 1`] = `
<div>
  <div
    className="path"
  >
    /Choose equipmentgroup /
    Fire detectors
  </div>
  <div
    className="filters padding"
  >
    <div
      className="open"
    >
      <div
        className="container"
      >
        <button
          className="button standard"
          onClick={[Function]}
        >
          <div>
            Component
          </div>
          <i
            className="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
    </div>
    <div
      className="open"
    >
      <div
        className="container"
      >
        <button
          className="button standard"
          onClick={[Function]}
        >
          <div>
            L1
          </div>
          <i
            className="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
    </div>
    <div
      className="open"
    >
      <div
        className="container"
      >
        <button
          className="button standard"
          onClick={[Function]}
        >
          <div>
            L2
          </div>
          <i
            className="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
    </div>
    <div
      className="open"
    >
      <div
        className="container"
      >
        <button
          className="button standard"
          onClick={[Function]}
        >
          <div>
            L3
          </div>
          <i
            className="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      className="content"
    >
      <div
        className="padding center"
      >
        <div
          className="container"
        >
          <div
            className="titlecontainer"
          >
            <div
              className="title notdynamic"
            >
              Smoke detector
            </div>
          </div>
          <hr
            className="line"
          />
        </div>
      </div>
      <div
        className="description"
      >
        <div
          className="container small"
        >
          <div
            className="titlecontainer"
          >
            Description
            <hr
              className="line"
            />
          </div>
          <div>
            The detector includes the sensor and local electronics such as the address-/ interface unit.
          </div>
        </div>
      </div>
      <div>
        <div
          className="container"
        >
          <div
            className="container"
          >
            <label
              className="index"
            >
              Date of revision: 
            </label>
            <label
              className="content"
            >
              23.03.2020
            </label>
          </div>
        </div>
        <div>
          <hr
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="container"
        >
          <div
            className="container"
          >
            <label
              className="index"
            >
              Remarks: 
            </label>
            <label
              className="content"
            >
              Remark this
            </label>
          </div>
        </div>
        <div>
          <hr
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="container"
        >
          <div
            className="container"
          >
            <label
              className="index"
            >
              Recommended values for calculation: 
            </label>
            <label
              className="content"
            >
              Recommended values
            </label>
          </div>
        </div>
        <div>
          <hr
            className="divider"
          />
        </div>
      </div>
      <div
        className="padding"
      >
        <div
          className="container large"
        >
          <div
            className="titlecontainer"
          >
            Definition of DU
            <hr
              className="line"
            />
          </div>
          <div>
            This is DU
          </div>
        </div>
      </div>
      <div
        className="center padding"
      >
        <div
          className="container"
        >
          <div
            className="titlecontainer"
          >
            <div
              className="title notdynamic"
            >
              Failure data
            </div>
          </div>
          <hr
            className="line"
          />
        </div>
      </div>
      <table
        className="dataTable"
      >
        <tr>
          <th>
            Failure rates
          </th>
          <th>
            Source
          </th>
          <th>
            DU
          </th>
          <th>
            T
          </th>
          <th>
            Obs period
          </th>
          <th>
            Population size
          </th>
          <th>
            Comment
          </th>
        </tr>
        <tr>
          <td>
            0,3
          </td>
          <td>
            A
          </td>
          <td>
            5
          </td>
          <td>
            0
          </td>
          <td>
            2006-2008
          </td>
          <td>
            231
          </td>
          <td>
            
          </td>
        </tr>
        <tr>
          <td>
            0,3
          </td>
          <td>
            B
          </td>
          <td>
            7
          </td>
          <td>
            0
          </td>
          <td>
            2013-2017
          </td>
          <td>
            87
          </td>
          <td>
            
          </td>
        </tr>
        <tr>
          <td>
            0,3
          </td>
          <td>
            A
          </td>
          <td>
            11
          </td>
          <td>
            0
          </td>
          <td>
            2012-2020
          </td>
          <td>
            763
          </td>
          <td>
            Fake news
          </td>
        </tr>
      </table>
    </div>
  </div>
</div>
`;
